--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Code Compiler</title>
+    <meta charset="UTF-8">
+    <title>Code Compiler</title>
 </head>
 <body>
-<h1>Code Compiler</h1>
-<form action="compile.php" method="post">
-<label for="language">Choose a language:</label>
-<select name="language" id="language">
-<option value="java">Java</option>
-<option value="js">JavaScript</option>
-<option value="python">Python</option>
-<option value="html">HTML</option>
-</select>
-<br>
-<label for="code">Enter your code:</label>
-<textarea name="code" id="code" cols="30" rows="10"></textarea>
-<br>
-<input type="submit" value="Compile">
-</form>
+    <h1>Code Compiler</h1>
+    <form action="compile.php" method="post">
+        <label for="language">Choose a language:</label>
+        <select name="language" id="language">
+            <option value="java">Java</option>
+            <option value="js">JavaScript</option>
+            <option value="python">Python</option>
+            <option value="html">HTML</option>
+        </select>
+        <br>
+        <label for="code">Enter your code:</label>
+        <textarea name="code" id="code" cols="30" rows="10"></textarea>
+        <br>
+        <input type="submit" value="Compile">
+    </form>
 </body>
 </html>
