--- a/main.html
+++ b/main.html
@@ -32,4 +32,8 @@
       
       function compileCode() {
         const code = editor.getValue();
-        let
+        console.log(code);
+      }
+    </script>
+  </body>
+</html>
